test/negative/210_wrong_return_type.fx
// expect: function
fun f(): int = "s"
println(f())
